fixed spacing

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -24,29 +24,32 @@ h1,h2,h3,h4,h5,h6,button
   font-weight: 400
   line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 150px) / (1600 - 150)))
 h4
-  font-size: calc(65px + (140 - 65) * ((100vw - 150px) / (1600 - 150)))
+  font-size: calc(65px + (140 - 80) * ((100vw - 150px) / (1600 - 150)))
 h5
   font-size: calc(20px + (60 - 20) * ((100vw - 150px) / (1600 - 150)))
 h6
-  font-size: calc(10px + (45 - 10) * ((100vw - 150px) / (1600 - 150)))
-  margin-top: 20px
+  font-size: calc(10px + (45 - 15) * ((100vw - 150px) / (1600 - 150)))
+  padding-left: 6px
+  margin-top: 10px
 
 // specific font sizes
 
 #jumbotron h6
-  font-size: calc(28px + (200 - 28) * ((100vw - 150px) / (1600 - 150)))
+  font-size: calc(28px + (200 - 90) * ((100vw - 150px) / (1600 - 150)))
 #jumbotron h1
-  font-size: calc(25px + (180 - 25) * ((100vw - 150px) / (1600 - 150)))
+  font-size: calc(25px + (180 - 105) * ((100vw - 150px) / (1600 - 150)))
 #prizes h5
   font-size: calc(16px + (28 - 16) * ((100vw - 150px) / (1600 - 150)))
 #prizes span
   font-size: calc(11px + (18 - 11) * ((100vw - 150px) / (1600 - 150)))
 #emergencycontacts h4
-  font-size: calc(40px + (130 - 40) * ((100vw - 150px) / (1600 - 150)))
+  font-size: calc(40px + (130 - 58) * ((100vw - 150px) / (1600 - 150)))
 #emergencycontacts h5
-  font-size: calc(30px + (50 - 30) * ((100vw - 150px) / (1600 - 150)))
+  font-size: calc(30px + (28 - 16) * ((100vw - 150px) / (1600 - 150)))
+  padding-left: 6px
 #emergencycontacts h6
-  font-size: calc(30px + (58 - 30) * ((100vw - 150px) / (1600 - 150)))
+  font-size: calc(30px + (28 - 16) * ((100vw - 150px) / (1600 - 150)))
+  padding-left: 6px
 #time
   font-size: 340px
 #countdown
@@ -67,11 +70,15 @@ h6
   top: 1250px
 #table1
   position: absolute
-  top: 1500px
+  top: 1700px
+  white-space: nowrap
+  min-width: 80%
 #table2
   position: absolute
-  top: 3200px
+  top: 2900px
   margin-top: 100px
+  white-space: nowrap
+  min-width: 80%
 #prizes
   position: absolute
   top: 4900px
